  . session_register(), session_unregister() and session_is_registered()
    (needed only with "register_globals=On").
  . "magic_quotes_gpc", "magic_quotes_runtime" and "magic_quotes_sybase" ini
    options. (Pierre)
  . Changed get_magic_quotes_gpc(), get_magic_quotes_runtime to always return
    false and set_magic_quotes_runtime() to raise an E_CORE_ERROR.
- Removed support for "continue" and "break" operators with non-constant
  operands. (Dmitry)
- Removed Freetype 1.x and GD 1.x support from GD extension. (Pierre)

- Moved extensions to PECL:
  . ext/ncurses (Hartmut)

- Improved ext/openssl (Dmitry)
  . Added support for OpenSSL digest functions
  . Added support for OpenSSL cipher functions
  . Added access to internal values of DSA, RSA and DH keys
- Improved ext/zlib; re-implemented non-file related functionality. (Mike)
- Improved output layer; see README.NEW-OUTPUT-API for internals. (Mike)
- Improved ext/mhash: (Mike)
  . Added keygen constants.
  . Added new functions: mhash_keygen_count, mhash_get_keygen_name,
    mhash_keygen_uses_hash, mhash_keygen_uses_salt, mhash_get_keygen_salt_size,
    mhash_keygen.

- Added runtime JIT auto-globals fetching and caching. (Dmitry, Sara)
- Added "jump label" operator (limited "goto"). (Dmitry, Sara)
- Added E_STRICT to E_ALL. (Dmitry)
- Added an optional parameter to strstr() and stristr() for retrieval of either
  the part of haystack before or after first occurrence of needle. (Johannes)
- Added streams features:
  . Second optional parameter to stream_context_create() to
    set params during context creation. (Sara)
  . "context" and "binary_pipes" params in "other_options" arg. (Sara)
  . stream_resolve_include_path(). (Sara)
- Added gmp_testbit() function. (Tony)
- Added shm_has_var() function. (Mike)
- Added str_getcsv() function. (Sara)
- Added ext/hash support to ext/session's ID generator. (Sara)

- Fixed bug #40325 (Vary: header missing in gzip output handlers). (Mike)